--- a/style.css
+++ b/style.css
@@ -86,35 +86,78 @@ main{
 
 /*Album section*/
 
-.img-container{
+.container{
     display:flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: baseline;
-    overflow-x: scroll;
-    margin-bottom: 15px;
-    max-width: 50%;
+    overflow: hidden;
+    margin-bottom: 45px;
+    width: 100%;
+}
+
+.no-display {
+    display: none;
 }
 
 .wrapper {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
 }
 
-.img-container img{
+.container img{
     height: 100px;
+    opacity: 0.5;
+    display: none;
 }
 
-.img-container img:hover {
-    height: 150px;
+.displaying {
+    display:flex;
+    justify-content: space-between;
+    align-items: baseline;
+    overflow: hidden;
+    width: 100%;
+}
+
+.displaying img {
+    display:inline !important;
+}
+
+.container img:hover {
+    opacity: 1;
+}
+
+.arrow {
+    position: absolute;
+    display: inline !important;
+    z-index: 1;
+}
+
+.arrow:hover {
+    opacity: 1;
+}
+
+.left {
+    left: 10%;
+}
+
+.right {
+    right: 10%;
+}
+
+.focus {
+    opacity: 1 !important;
 }
 
 .render {
-    width: 40%;
+    width: 45%;
 }
 
 .render img {
     width: 100%;
+    border: 4px solid #222;
+    border-radius: 5px;
 }
 
 footer {
