--- a/style.css
+++ b/style.css
@@ -7,7 +7,14 @@ html {
     color: #414141;
     background-color: #eaeaea;
     font-size: 16px;
+    width: 100%;
+    padding: 0px;
 }
+
+html, body, header, main, footer {
+    margin: 0px;
+}
+
 
 h2{
     font-size: 1.875em;
@@ -23,8 +30,8 @@ header {
     padding: 5px 5%;
     position: sticky;
     top: 0px;
-    background-color: #eaeaea;
-    z-index: 1;
+    background-color: #bbbbbb;
+    z-index: 2;
 }
 
 .logo {
@@ -67,6 +74,25 @@ main{
     padding: 5px 10.5%;
 }
 /*About me */
+
+#oait96 {
+    display: inline-block;
+    width: 55%;
+    margin-right: 20px;
+}
+
+#about-me img {
+    max-width: 40%;
+    display: inline-block;
+}
+
+#about-me {
+    display: flex;
+    justify-content: space-between;
+    align-items:flex-start;
+    padding: 25px 0px;
+}
+
 /*Game*/
 #game h3{
     text-decoration: underline;
@@ -88,6 +114,10 @@ main{
     display: none;
 }
 
+#game li {
+    cursor: pointer;
+}
+
 /*Album section*/
 
 .container{
@@ -97,10 +127,6 @@ main{
     overflow: hidden;
     margin-bottom: 45px;
     width: 100%;
-}
-
-.no-display {
-    display: none;
 }
 
 .wrapper {
@@ -134,6 +160,8 @@ main{
 
 .arrow {
     position: absolute;
+    height: 100px;
+    opacity: 0.5;
     display: inline !important;
     z-index: 1;
 }
@@ -150,12 +178,8 @@ main{
     right: 10%;
 }
 
-.focus {
-    opacity: 1 !important;
-}
-
 .render {
-    width: 45%;
+    width: 60%;
 }
 
 .render img {
